--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>	
 
   <body>
-    <svg width="100%" height="100%"></svg>
+    <svg width="600" height="600"></svg>
     <script src="main.js"></script>
   </body>
 
